fix responsive on mobile screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,3 +98,11 @@ h2 {
 .profile header {
 	text-align: center;
 }
+
+@media screen and (max-width: 1000px) {
+    main #content,
+    main aside {
+        width: 100%;
+        padding: 0;
+    }
+ }
